# DS-I-2025-Tool-a-Thon

./: README.md  config_full_tile.yaml  model-card.md  pyproject.toml
assets/databases/: global_cities_database.csv  global_cities_oceanmask.dbf  global_cities_oceanmask.shp  global_cities_oceanmask.shx
configs/: config_full_tile.yaml
data/downloaded_data/era5/2m_temperature/: abuja_nga.2020.nc  abuja_nga.2021.nc  accra_gha.2020.nc  accra_gha.2021.nc  cape-town_zaf.2020.nc  cape-town_zaf.2021.nc  durban_zaf.2020.nc  durban_zaf.2021.nc  johannesburg_zaf.2020.nc  johannesburg_zaf.2021.nc
data/downloaded_data/hls/abuja_nga/HLS.L30.T32PLR.2020070T094940.v2.0/: HLS.L30.T32PLR.2020070T094940.v2.0.Fmask.tif
data/downloaded_data/hls/accra_gha/HLS.L30.T30NZM.2020034T101546.v2.0/: HLS.L30.T30NZM.2020034T101546.v2.0.Fmask.tif
data/downloaded_data/hls/cape-town_zaf/HLS.L30.T34HBH.2020020T083522.v2.0/: HLS.L30.T34HBH.2020020T083522.v2.0.Fmask.tif
data/downloaded_data/hls/durban_zaf/HLS.L30.T36JTM.2021069T075103.v2.0/: HLS.L30.T36JTM.2021069T075103.v2.0.Fmask.tif
data/downloaded_data/hls/johannesburg_zaf/HLS.L30.T35JNM.2021307T080244.v2.0/: HLS.L30.T35JNM.2021307T080244.v2.0.Fmask.tif
notebooks/: 0_1.ipynb  0_2.ipynb  0_3.ipynb  2_introduction_to_LST_Tweening.ipynb  3_tweening_data_preparation.ipynb  4_download_data.ipynb  5_preprocess_data.ipynb  DSI-tasks.ipynb  DSI_tasks.ipynb
notebooks/data/: nga_subnational_covid19_hera.csv  trip_production_admin1.csv
utils/: config_download.json  config_download_example.json  config_preprocess.json  download_functions.py  main_download.py  main_preprocess.py  plotting.py  preprocessing.py  tweening.py
